After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772851 - tracers: fix structure leak
tracers: fix structure leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 1.10.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-13 11:17 UTC by Vincent Penquerc'h
Modified: 2016-10-31 14:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix structure leak (1.10 KB, patch)
2016-10-13 11:18 UTC, Vincent Penquerc'h
none Details | Review
fix structure leak (1.14 KB, patch)
2016-10-13 11:52 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2016-10-13 11:17:28 UTC
fix structure leak
Comment 1 Vincent Penquerc'h 2016-10-13 11:18:56 UTC
Created attachment 337580 [details] [review]
fix structure leak
Comment 2 Sebastian Dröge (slomo) 2016-10-13 11:36:47 UTC
Comment on attachment 337580 [details] [review]
fix structure leak

Can you refactor it a bit to go ahead without the almost hidden assignment in the middle of the ternary operator? :) Move it to its own line or so.

Also why can't we just put a NULL there instead of a dummy structure?
Comment 3 Vincent Penquerc'h 2016-10-13 11:52:57 UTC
Created attachment 337586 [details] [review]
fix structure leak
Comment 4 Vincent Penquerc'h 2016-10-13 11:53:59 UTC
About using NULL, no idea what this does in the first place, first time I see tracers, no clue what it even does (though I have my theory).
Comment 5 Sebastian Dröge (slomo) 2016-10-13 12:01:55 UTC
Comment on attachment 337586 [details] [review]
fix structure leak

Go ahead, but add a FIXME comment about using NULL instead of the dummy
Comment 6 Vincent Penquerc'h 2016-10-13 12:07:33 UTC
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Thu Oct 13 12:18:12 2016 +0100

    tracers: fix structure leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=772851