tracers: fix structure leak

https://bugzilla.gnome.org/show_bug.cgi?id=772851